Complete first draft of the talk